# bah2026-ps8

./: .gitignore  ARCHITECTURE.md  METHODS.md  README.md  idea.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  faustini.yaml
docs/: DATA_SOURCES.md  SCIENCE.md
outputs/faustini/: cpr.tif  ice_mask.tif  results_summary.json  slope.tif
outputs/realdata/: realdata_report.html  realdata_summary.json
src/lunaris/: __init__.py  cli.py  config.py  constants.py  pipeline.py  scene.py
src/lunaris/classify/: __init__.py  evidence.py  fusion.py  ice_lut.py
src/lunaris/io/: __init__.py  cache.py  download.py  readers.py  registry.py  synthetic.py
src/lunaris/planning/: __init__.py  astar.py  cost.py  dstar_lite.py  energy.py  landing.py  nsga2.py  rrt_star.py  theta_star.py
src/lunaris/polarimetry/: __init__.py  coherence.py  cpr.py  decomposition.py  speckle.py  stokes.py
src/lunaris/terrain/: __init__.py  boulders.py  dem.py  illumination.py  thermal.py
src/lunaris/viz/: __init__.py  charts.py  maps.py  report.py  terrain3d.py
src/lunaris/volume/: __init__.py  dielectric.py  estimate.py
tests/: conftest.py  test_classify.py  test_foundation.py  test_io_download.py  test_pipeline.py  test_planning.py  test_polarimetry.py  test_terrain.py  test_viz.py  test_volume.py
